--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --reporter-option maxDiffSize=1e9"
   },
   "dependencies": {
     "miniprogram-compiler": "^0.2.1"
