feat: 增加一些方法

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,12 @@ add_executable(wcc
     src/wxml/rewrite.cpp
     src/wxml/name_allocator.cpp
     src/wxml/dom_lib/token.cpp
+    src/wxml/dom_lib/tokenizer.cpp
+    src/wxml/dom_lib/parser.cpp
     src/wxml/compiler.cpp
     src/wxml/dom_lib/str_cache.cpp
     src/wxml/dom_lib/wxml_dom.cpp
     src/wxml/dom_lib/machine.cpp
-    src/wxml/dom_lib/parser.cpp
     src/utils/string_utils.cpp
     src/utils/file.cpp
     )
@@ -27,9 +28,8 @@ add_executable(
     test/resolve_path.cpp
     src/wxml/dom_lib/common.cpp
     )
-add_test(
-    resolve_test
-    resolve_path
+add_executable(test1
+    test/test.cpp
     )
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
