--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ add_executable(wcc
     src/night/ns_token.cpp
     src/night/ns_god/ns_god.cpp
     src/wxml/expr_lib/base.cpp
+    src/wxml/expr_lib/bnf.cpp
     src/wxml/expr_lib/common.cpp
     src/wxml/expr_lib/expr_syntax_tree.cpp
     src/wxml/expr_lib/parser.cpp
