feat: transit table

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,8 +49,6 @@ add_executable(wcc
     src/utils/file.cpp
     )
 add_executable(wcsc
-    src/include/bittest.h
-    src/utils/bittest.cpp
     src/wcsc.cpp
     src/wcsc/usage.cpp
     src/wxa/wxa.cpp
@@ -60,11 +58,13 @@ add_executable(wcsc
     src/wxss/token.cpp
     src/wxss/tokenizer.cpp
     src/wxss/x_compiler.cpp
+    src/wxss/css_tree_lib/css_tree_lib.cpp
     src/wxss/css_tree_lib/base.cpp
     src/wxss/css_tree_lib/css_syntax_tree.cpp
     src/wxss/css_tree_lib/lexical_checker.cpp
     src/wxss/css_tree_lib/parser.cpp
     src/wxss/css_tree_lib/transit_table.cpp
+    src/utils/bittest.cpp
     src/utils/json.cpp
     src/utils/string_utils.cpp
     src/utils/file.cpp
