--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ on:
   push:
     tags:        
       - v*
-    branches: [ master, dev, 45-snap-version]
+    branches: [ master, dev, ci]
   pull_request:
     branches: [ master ]
   # # Allows you to run this workflow manually from the Actions tab
