--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,10 +57,10 @@
         "variant": "cpp"
     },
     "cmake.debugConfig": {
-        "cwd": "/mnt/d/Work/WeChatProjects/miniprogram-1",
+        "cwd": "/mnt/d/Work/WeChatProjects/tdesign-miniprogram-starter-retail",
         "args": [
             "\"--config-path\"",
-            "\"/mnt/d/Work/WeChatProjects/miniprogram-1/wcc/99a9bac3c05fc25dd070298212c4a7d3\""
+            "\"/mnt/d/Work/WeChatProjects/case4-cmd.txt\""
         ]
     },
     "cmake.configureSettings": {
