--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,11 +51,14 @@ jobs:
           echo "::set-output name=tag::$tag"
           echo "::set-output name=name::$name"
           
-      - name: Configure the project
-        uses: threeal/cmake-action@v1.3.0
+      # - name: Configure the project
+      #   uses: threeal/cmake-action@v1.3.0
   
+      # - name: Build the project
+      #   run: cmake --build build
+      
       - name: Build the project
-        run: cmake --build build
+        run: docker-compose up
 
       - name: Upload prepare
         run: |
