--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3"
 services:
-  wechat_devtools:
+  wx_compiler:
     image: jiyecafe/wechat-devtools-build:v3 
     # build:
     #   context: ./docker
