--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,8 +30,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'recursive'
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
 
       - name: Prepare
         run: |
@@ -90,6 +88,17 @@ jobs:
         node-version: [16.x]
         ARCH: ['x86_64']
     steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'recursive'
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          # Version Spec of the version to use in SemVer notation.
+          # It also emits such aliases as lts, latest, nightly and canary builds
+          # Examples: 12.x, 10.15.1, >=10.15.0, lts/Hydrogen, 16-nightly, latest, node
+          node-version: '16.20.2'
+          check-latest: false
       - name: Download artifacts
         uses: actions/download-artifact@v2
 
@@ -115,6 +124,7 @@ jobs:
           
           sudo apt update
           sudo apt install -y wine64
+          sudo apt-add-repository universe
           sudo dpkg --add-architecture i386
           dpkg --print-foreign-architectures
           
@@ -122,15 +132,24 @@ jobs:
           sudo apt install libwine
           echo "install wine32..."
           sudo apt install wine32
+          sudo apt-get install wine-binfmt
+          sudo update-binfmts --import /usr/share/binfmts/wine
 
           corepack enable
           ls -l
           mkdir build
-          cp **build/{wcc, wcsc} build
+          cp **build/wcc build
+          cp **build/wcsc build
+          chmod +x build/*
+          ls -l build
+          node -v
           pnpm install
 
       - name: Test
         run: |
+          ls -l test/wine
+          # ./test/wine/wcc.exe
+          pnpm run test-prepare
           pnpm run test
         
   upload:
