--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,8 +30,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'recursive'
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
 
       - name: Prepare
         run: |
@@ -51,11 +49,17 @@ jobs:
           echo "::set-output name=tag::$tag"
           echo "::set-output name=name::$name"
           
-      - name: Configure the project
-        uses: threeal/cmake-action@v1.3.0
+      # - name: Configure the project
+      #   uses: threeal/cmake-action@v1.3.0
   
+      # - name: Build the project
+      #   run: cmake --build build
+      
       - name: Build the project
-        run: cmake --build build
+        run: |
+          export DOCKER_UID=$UID
+          export DOCKER_GID=$GID  
+          docker-compose up
 
       - name: Upload prepare
         run: |
@@ -71,13 +75,87 @@ jobs:
         uses: actions/upload-artifact@v2.3.1
         with:
           # Artifact name
-          name: wechat-devtools-${{ matrix.ARCH }}.build
+          name: wx-compiler-${{ matrix.ARCH }}.build
           path: tmp/build
 
+  test:
+    name: Test for spec
+    needs:
+      - build
+    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        node-version: [16.x]
+        ARCH: ['x86_64']
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'recursive'
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          # Version Spec of the version to use in SemVer notation.
+          # It also emits such aliases as lts, latest, nightly and canary builds
+          # Examples: 12.x, 10.15.1, >=10.15.0, lts/Hydrogen, 16-nightly, latest, node
+          node-version: '16.20.2'
+          check-latest: false
+      - name: Download artifacts
+        uses: actions/download-artifact@v2
+
+      - name: Inspect directory after downloading artifacts
+        run: ls -alFR
+
+      - name: Prepare
+        run: |
+          set -x -u -o pipefail
+          source /etc/os-release
+          
+          # Get rid of packages installed from ppa:ondrej/php so that we will be able to install wine32:i386 without conflicts
+          # (see issue https://github.com/actions/virtual-environments/issues/4589)
+          # In detail we:
+          #   1. Remove all packages that ppa:ondrej/php has but plain Ubuntu doesn't, e.g. everything PHP
+          #   2. Revert (remaining) packages that ppa:ondrej/php and plain Ubuntu share, back to the plain Ubuntu version
+          #   3. Assert that no packages from ppa:ondrej/php are left installed
+          dpkg -l | grep '^ii' | grep -F deb.sury.org | awk '{print $2}' | grep '^php' \
+          | xargs -r -t sudo apt-get remove --yes libpcre2-posix3 libzip4
+          dpkg -l | grep '^ii' | grep -F deb.sury.org | awk '{print $2}' | sed "s,\$,/${UBUNTU_CODENAME}," \
+          | xargs -r -t sudo apt-get install --yes --no-install-recommends --allow-downgrades -V
+          ! dpkg -l | grep '^ii' | grep -F deb.sury.org
+          
+          sudo apt update
+          sudo apt install -y wine64
+          sudo apt-add-repository universe
+          sudo dpkg --add-architecture i386
+          dpkg --print-foreign-architectures
+          
+          sudo apt update 
+          sudo apt install libwine
+          echo "install wine32..."
+          sudo apt install wine32
+          sudo apt-get install wine-binfmt
+          sudo update-binfmts --import /usr/share/binfmts/wine
+
+          corepack enable
+          ls -l
+          mkdir build
+          cp **build/wcc build
+          cp **build/wcsc build
+          chmod +x build/*
+          ls -l build
+          node -v
+          pnpm install
+
+      - name: Test
+        run: |
+          ls -l test/wine
+          # ./test/wine/wcc.exe
+          pnpm run test-prepare
+          pnpm run test
+        
   upload:
     name: Create release and upload artifacts
     needs:
-      - build
+      - test
     runs-on: ubuntu-latest
     steps:
       - name: Download artifacts
