--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,4 +104,4 @@ set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
 
-add_subdirectory(./src/nwjs)
+add_subdirectory(./src/module)
