--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -18,6 +18,7 @@ runs:
       run: |
         until $(curl --output /dev/null --silent --head --fail http://127.0.0.1:8080); do
           printf '.'
+          curl http://127.0.0.1:8080
           sleep 1
         done
       shell: bash
