--- a/src/module/CMakeLists.txt
+++ b/src/module/CMakeLists.txt
@@ -94,3 +94,33 @@ set_target_properties(wcc_module PROPERTIES PREFIX "" SUFFIX ".node")
 # target_link_libraries(wcc_module ${CMAKE_CURRENT_SOURCE_DIR}/lib/nw-v${NW_VERSION}.lib)
 # target_link_libraries(wcc_module ${CMAKE_CURRENT_SOURCE_DIR}/lib/node-v${NW_VERSION}.lib)
 
+
+add_library(wcsc_module
+    SHARED
+    ./wcsc.cpp
+    ./config/wcsc.cc
+    ../wcsc/usage.cpp
+    ../wxa/wxa.cpp
+    ../wxml/common.cpp
+    ../wxml/rewrite.cpp
+    ../wxml/rpx.cpp
+    ../wxss/common.cpp
+    ../wxss/token.cpp
+    ../wxss/tokenizer.cpp
+    ../wxss/x_compiler.cpp
+    ../wxss/css_tree_lib/css_tree_lib.cpp
+    ../wxss/css_tree_lib/base.cpp
+    ../wxss/css_tree_lib/css_syntax_tree.cpp
+    ../wxss/css_tree_lib/lexical_checker.cpp
+    ../wxss/css_tree_lib/parser.cpp
+    ../wxss/css_tree_lib/rule.cpp
+    ../wxss/css_tree_lib/transit_table.cpp
+    ../utils/bittest.cpp
+    ../utils/json.cpp
+    ../utils/string_utils.cpp
+    ../utils/file.cpp
+)
+set_target_properties(wcsc_module PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+# DV8_COMPRESS_POINTERS: 缺少会导致IsString崩溃
+target_compile_options(wcsc_module PRIVATE "-DNODE_GYP_MODULE_NAME=binding" "-DUSING_UV_SHARED=1" "-DUSING_V8_SHARED=1" "-DV8_DEPRECATION_WARNINGS=1" "-DV8_DEPRECATION_WARNINGS" "-DV8_REVERSE_JSARGS" "-D_GLIBCXX_USE_CXX11_ABI=1" "-D_LIBCPP_HAS_NO_VENDOR_AVAILABILITY_ANNOTATIONS" "-D_LARGEFILE_SOURCE" "-D_FILE_OFFSET_BITS=64" "-DV8_COMPRESS_POINTERS" "-DV8_31BIT_SMIS_ON_64BIT_ARCH" "-D__STDC_FORMAT_MACROS" "-DOPENSSL_NO_PINSHARED" "-DOPENSSL_THREADS" "-DOPENSSL_NO_ASM" "-DBUILDING_NODE_EXTENSION")
+set_target_properties(wcsc_module PROPERTIES PREFIX "" SUFFIX ".node")
