fix: wine prepare

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -141,7 +141,7 @@ jobs:
           ls -l build
           ls -l test/runner/nwjs/wcc/build/Release
           # fix: 预先运行，做一下配置，不然
-          ./test/wine/wcc.exe
+          ./test/wine/wcc.exe 2>0
           # 需要wine64
           pnpm run test
         
