--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -120,7 +120,7 @@ jobs:
           sudo update-binfmts --import /usr/share/binfmts/wine
           wine --version
           # fix: 预先运行，做一下配置，不然第一次执行会有问题
-          winecfg
+          ./test/wine/wcc.exe || true
 
           corepack enable
           ls -l
