--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -142,7 +142,7 @@ jobs:
           ls -l test/runner/nwjs/wcc/build/Release
           # fix: 预先运行，做一下配置，不然第一次执行会有问题
           ./test/wine/wcc.exe || true
-          ./test/wine/wcc.exe || true
+          ./test/wine/wcc.exe -v || true
           # 需要wine64
           pnpm run test
         
