fix: wcsc 索引与 一个括号 处理一处索引出现负数的问题； 一处css输出了多余的括号。

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,18 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Linux module test",
+            "program": "${workspaceFolder}/cache/nwjs-sdk-v0.55.0-linux-x64/nw",
+            "args": [
+                "${workspaceFolder}/test/runner/nwjs/compiler.js",
+                "wcsc",
+                "${workspaceFolder}/test/spec/issue/129/data/example.json"
+            ],
+            "cwd": "${workspaceFolder}"
+        },
         
         {
             "name": "wcc wxs sample2",
